# clevo-control-center-linux

./: .gitignore  AGENT_HANDOFF.md  CONTRIBUTING.md  Cargo.toml  DCHU_ADJUSTMENTS.md  README.md  SECURITY.md  findings.md  progress.md  task_plan.md
app/: clevo-control-center.desktop  clevo-keyboard-led.desktop  run-clevo-led-gui.sh
module/: Makefile  clevo_control_center.c  clevo_kbd_led.c
packaging/: install.sh
packaging/arch/: PKGBUILD.in  clevo-control-center.install
packaging/deb/: control  postinst  postrm
packaging/rpm/: clevo-control-center.spec.in
scripts/: build-release-binary.sh  build.sh  check-env.sh  package-arch.sh  package-deb.sh  package-release.sh  package-rpm.sh  package-tar.sh  probe-mode-coupling.sh  run-gui.sh  run-service.sh  stop-service.sh
src/: battery_strategy.rs  dchu.rs  effects.rs  fan_curve.rs  hardware.rs  led.rs  main.rs  model.rs  module_loader.rs  preferences.rs  service.rs  settings.rs  ui.rs
src/dchu/: cli.rs  io.rs  tests.rs
src/hardware/: linux.rs
src/ui/: advanced.rs  app.rs  battery.rs  color_picker.rs  fan.rs  fan_gauge.rs  layout.rs  mod.rs  pages.rs  theme.rs  widgets.rs
src/ui/app/: persistence.rs  window.rs
src/ui/pages/: gpu.rs  lighting.rs  overview.rs  settings.rs
