[package]
name = "clevo-control-center"
version = "0.1.0"
edition = "2021"
description = "Clevo/BlueSky control center for Linux"
license = "GPL-2.0-only"
repository = "https://github.com/pqcqaq/clevo-control-center-linux"
homepage = "https://github.com/pqcqaq/clevo-control-center-linux"
readme = "README.md"
keywords = ["clevo", "linux", "hardware-control", "keyboard-lighting"]
categories = ["gui", "hardware-support"]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
eframe = "0.29"
egui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
strip = "symbols"
